@@ -1,3 +1,8 @@
+1999-02-08  Tanaka Akira      <akr@jaist.ac.jp>
+
+	* mel-q-ccl.el (mel-ccl-encode-quoted-printable-generic): Write white
+	space after checking following sequence.
+
 1999-01-20  Tanaka Akira      <akr@jaist.ac.jp>
 
 	* mmgeneric.el (mime-insert-header-from-buffer): Do not contain : in
